--- a/ProjectAnalysis.ipynb
+++ b/ProjectAnalysis.ipynb
@@ -1152,7 +1152,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#get zip code"
+   ]
   }
  ],
  "metadata": {
